include character guild and gender from Blizzard
