# src/main/java/io/rbgs/api/characters/dto/CharacterProfile.java
@@ -1,0 +1,3 @@
+package io.rbgs.api.characters.dto;
+
+public record CharacterProfile(WowAccountProfile.NamedReference guild, WowAccountProfile.NamedReference gender) { }
